--- a/MyNewCv..html
+++ b/MyNewCv..html
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <title>Prince Manohar</title>
+  <title>Prince Manohar09</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <style>
