--- a/MyNewCv..html
+++ b/MyNewCv..html
@@ -92,7 +92,7 @@
 	</header>
 	
 	<article>
-	   <a href="D:\my phone pics and vedios\pictures\Pictures\Instagram\IMG_20160629_094238.jpg">
+	   <a href="IMG_20160629_094238.jpg">
 		<img style="float:left; padding:0px 20px 10px 30px;" src="D:\my phone pics and vedios\pictures\Pictures\Instagram\IMG_20160629_094238.jpg" width="350" height="350"></img>
 		</a>
 	   <h1 style="font-size:50px; text-align:center; padding:0px;">Hello,</h1>
