--- a/MyNewCv..html
+++ b/MyNewCv..html
@@ -1,11 +1,11 @@
 <html>
  <head>
-  <title>Prince Manohar09</title>
+  <title>PRINCE MANOHAR</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <style>
      div.container {
-	background-color:white;
+	background-color:rgb(206, 255, 252);
 	height:100%;     
 	}
 
@@ -27,8 +27,7 @@
     	overflow: hidden;
     	background-color: #333333;
 	}
-	img{
-	border-radius:50%;}
+
      li {
     	float: right;
 	}
@@ -44,14 +43,17 @@
      li a:hover {
     	background-color: blue;
 	}
-     
+     img{
+	border-radius:50%;
+	}
+
      article {
     	margin-left: 150px;
     	padding: 1em;
     	overflow: hidden;
 	}
      .fa {
-  	padding: 2px;
+  	padding: 5px 5px;
   	font-size: 20px;
   	width: 30px;
   	text-align: center;
@@ -79,26 +81,25 @@
  </head>
   <body style="padding:0px; margin:0px;">
     <div class="container">
-      <header><h1 style="font-size:40px"><b>Prince Manohar</b></h1>
-      <h2>Software Engineer/Web Developer</h2>
+      <header><h1 style="font-size:40px"><b>PRINCE MANOHAR</b></h1>
+      <h2>Android/Web Developer</h2>
        <nav>
 	 <ul>  
-  	   <li><a href="file:///C:/Users/PRINCE/Desktop/HTML%20Files/contacts.html~">Contacts</a></li>
-  	   <li><a href="file:///C:/Users/PRINCE/Desktop/HTML%20Files/projects.html~">Projects</a></li>
-  	   <li><a href="file:///C:/Users/PRINCE/Desktop/HTML%20Files/resume.html~">Resume</a></li>
-  	   <li><a href="file:///C:/Users/PRINCE/Desktop/HTML%20Files/CV_webpage.html~">Home</a></li>
+  	   <li><a href="https://github.com/princemanohar">Projects</a></li>
+  	   <li><a href="Resume_princemanohar.pdf">Resume</a></li>
+  	   <li><a href="home.html">Home</a></li>
 	</ul>
 	</nav>
 	</header>
 	
 	<article>
-	   <a href="IMG_20160629_094238.jpg">
-		<img style="float:left; padding:0px 20px 10px 30px;" src="IMG_20160629_094238.jpg" width="350" height="350"></img>
+	   <a href="/home/sumit/Mydevice/card/DCIM/Camera/P_20170603_154546_BF.jpg">
+		<img style="float:left; padding:0px 20px 30px 30px;" src="IMG_2488.JPG" width="350" height="350"></img>
 		</a>
 	   <h1 style="font-size:50px; text-align:center; padding:0px;">Hello,</h1>
            <h2 style="text-align:center;">a bit about me:</h2>
-		<p style="text-align:center; padding:20px;"><b style="padding:10px;"><a id="resume" href="file:///C:/Users/PRINCE/Desktop/HTML%20Files/resume.html~">My Resume</a></b>
-			<b><a id="projects" href="file:///C:/Users/PRINCE/Desktop/HTML%20Files/projects.html~">My Work</a></b>
+		<p style="text-align:center; padding:20px;"><b style="padding:10px;"><a id="resume" href="Resume_princemanohar.pdf">My Resume</a></b>
+			<b><a id="projects" href="https://github.com/princemanohar">My Work</a></b>
 		</p>
 		<p style="text-align:center; font-size:20px;">Hey, everyone! this is a first webpage<br/> I've made. This is a webpage for <br/>my CV. It has all 			the details about<br/> my professional career, my<br/> education, and my work.</p>
 	</article>
@@ -117,9 +118,8 @@
 	 <tr>
 	  <td>Mob: +91-7797045315</td>
 	  <td>princemanohar0909@gmail.com</td>
-	  <td><a href="https://www.facebook.com/prince.manohar.9" class="fa fa-facebook" style="color:rgb(22, 173, 255);"></a>
-	      <a href="https://plus.google.com/u/1/" class="fa fa-google-plus" style="color:rgb(22,173,255);"></a>
-	  </td>	  
+	  <td><a href="https://www.facebook.com/prince.manohar.9?fref=hovercard&hc_location=chat" class="fa fa-facebook" style="color:rgb(22, 173, 255);"></a>
+	      </td>	  
 	 </tr>
 	</table>
      </footer>
